<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Offline e-ASCOV</string>
    <string name="datetime_format" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="date_format" translatable="false">yyyy-MM-dd</string>
    <string name="time_format" translatable="false">HH:mm:ss</string>
    <string name="api_url" translatable="false">https://rbc.gov.rw/community/data-sharing/api/</string>
    <string name="phone_start" translatable="false">078 </string>
    <string name="informations"> Ahabanza </string>
    <string name="intro">Ikaze kuri application ya e-ASCov. kanda ahanditse \"Tangira\" kugirango ukomeze </string>
    <string name="start_test">Tangira</string>
    <string-array name="questions">
        <item>Usuzumwa yaba yaragiriye urugendo hanze y\’igihugu mbere yuko agira ibimenyetso?</item>
        <item>Usuzumwa yaba yarahuye n\’umuntu ushobora kuba arwaye cyangwa akekwaho COVID-19 mu minsi 24 mbere yuko agira ibimenyetso? </item>
        <item>Usuzumwa yaba yavuzeko yagize umuriro?</item>
        <item>Igipimo cy\’umuriro wafatiye usuzumwa ni ikihe?  </item>
        <item>Usuzumwa amaranye umuriro igihe kingana iki (iminsi ingahe)? </item>
        <item>Usuzumwa yaba afite inkorora isanzwe cyangwa yiyongereye mu minsi ya vuba?</item>
        <item>Mu masaha 24 cyangwa arenga, usuzumwa yaba atabasha kurya cyangwa kunywa?</item>
        <item>Mu masaha 24 ashize, usuzumwa yigeze guhumeka nabi mu gihe avuga cyanga igihe akoresheje ingufu zoroheje? </item>
        <item>Usuzumwa yaba yarigeze ababara mu muhogo mu minsi mike ishize?</item>
        <item>Usuzumwa yaba yarigeze atakaza icyanga cyangwa uguhumurirwa mu minsi mike ishize? </item>
        <item>Usuzumwa yaba yarigeze aribwa mu mikaya cyangwa mu ngingo mu minsi mike ishize?</item>
        <item>Usuzumwa yaba yigeze acibwamo (agira impiswi) mu masaha 24 ashize?</item>
        <item>Usuzumwa afite ibiro bingahe?</item>
        <item>Usuzumwa afite uburebure bungana iki?</item>
        <item>Usuzumwa yaba afite umuvuduko w\’amaraso uri hejuru, cyangwa indwara z\’umutima n\’imiyoboro y\’amaraso? </item>
        <item>Ese yaba afata imiti y’indwara z’umutima?</item>
        <item>Usuzumwa yaba arwaye diyabete?</item>
        <item>Usuzumwa yaba yarigeze arwara kanseri mu myaka 3 ishize? </item>
        <item>Usuzumwa yaba afite indwara z’ubuhumekero zizwi? </item>
        <item>Usuzumwa yaba atwite?</item>
        <item></item>
    </string-array>
    <string name="next_question">Ikibazo gikurikira</string>
    <string name="question_progress">Ikibazo %1$d muri %2$d</string>
    <string name="unity_height">cm</string>
    <string name="unity_weight">Kg</string>
    <string name="unity_days">iminsi</string>
    <string name="select_option"> Hitamo </string>
    <string name="fill_fields">Uzuza aho bisabwa</string>
    <string name="yes">Yego</string>
    <string name="no">Oya</string>
    <string name="not_know">Simbizi</string>
    <string name="phone_question">Numero ya telephone yawe?</string>
    <string name="phone_error">Nyamuneka shyiramo imibare icumi (10) ya numero yawe</string>
    <string name="export">Ohereza Amakuru</string>
    <string name="to_export">Ohereza Nonaha</string>
    <string name="export_text">Ugiye kohereza muri sisitemu amakuru y\'abantu %1$d umaze gukorera.</string>
    <string name="export_done">Kohereza byarangiye</string>
    <string name="export_error">Hari ibitagenze neza mukohereza amakuru muri sisitemu. Nyamuneka, saba ubufasha kugirango bikemukeNtibishoboka k\u0027umugabo</string>
    <string name="export_restart">Ongera wohereze</string>
    <string name="export_last">Uheruka kohereza amakuru muri sisitemu ku italiki ya %1$s, saa %2$s.</string>
    <string name="save_and_continue"> Bika ukomeza </string>
    <string name="results">Ibisubizo</string>
    <string name="restart">Subiramo isuzuma</string>
    <string name="select_option_error">Hitamo</string>
    <string name="city_error">Nyamuneka, shyiramo aho usuzumwa atuye</string>
    <string name="days_error">Nyamuneka, shyiramo iminsi iri hagati ya 0 na 35</string>
    <string name="age_error">Nyamuneka, shyiramo iminsi iri hagati ya 0 na 5</string>
    <string name="height_error">Nyamuneka, shyiramo uburebure buri hagati ya sentimetere (cm) 30 na 220</string>
    <string name="weight_error">Nyamuneka, shyiramo ibiro biri hagati ya 10 na 220 </string>
    <string-array name="choices">
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Munsi ya 38°|Hejuru ya 38°</item>
        <item>iminsi</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Kg|Simbizi</item>
        <item>Cm|Simbizi</item>
        <item>Yego|Oya|Simbizi</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya|Ntibishoboka kumugabo</item>
        <item></item>
    </string-array>
    <string-array name="question_types">
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>double</item>
        <item>digit_forced</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>digit</item>
        <item>digit</item>
        <item>ternary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>ternary</item>
        <item>rdt</item>
    </string-array>
    <string name="result1">Birashoboka ko usuzumwa nta bwandu bw icyorezo cya COVID-19 afite. Musabe kukumenyesha mugihe abonye ibimenyetso bishya.</string>
    <string name="result2"> Birashoboka ko usuzumwa yaba afite ubwandu bw icyorezo cya COVID-19. Mukorere isuzuma rya Rapid Diagnosis Test (RDT) kugirango ubyemeze. </string>
    <string name="result3">Biragaragara ko usuzumwa ashobora kuba afite ubwandu bw icyorezo cya COVID-19 buri ku kigero cyo hejuru. Mukorere isuzuma rya Rapid Diagnosis Test (RDT) kugirango ubyemeze neza.</string>
    <string name="result3bis">The situation may fall under COVID-19. Address the subject to the district hospital because sign of gravity associated.</string>
    <string name="result4">The situation may fall under COVID-19. Address the subject to the Health center for evaluation by a nurse.</string>
    <string name="result5">Address the subject urgently to the district hospital for assessment by a doctor. COVID-19.</string>
    <string name="question_example">Avez-vous de l’hypertension artérielle mal équilibrée ? Ou avez-vous une maladie cardiaque ou vasculaire ? Prenez-vous un traitement pour le cœur ? </string>
    <string name="export_example">Vous êtes sur le point d’exporter les 213 précédents diagnostics effectués.\n\nLe dernière export date du 21/06/20, à 21h15.</string>
    <string name="results_example">Votre situation peut relever d’un COVID-19. A adresser au centre de santé pour évaluation par un(e) infirmier(e).</string>
    <string name="Invalid_code" tools:ignore="MissingTranslation">Kode ya Index washyizemo ntabwo ibonetse. Reba niba yanditse neza, wongere ugerageze </string>
    <string name="case_index">Case Code </string>
    <string name="Firstname">Izina ry\'umuryango</string>
    <string name="Lastname"> Izina ry\'idini </string>
    <string name="nid">Indangamuntu / Pasiporo</string>
    <string name="Gender">Igitsina</string>
    <string name="Telephone">Telefone</string>
    <string name="dob">Italiki y\'amavuko</string>
    <string name="Occupation">Icyo akora</string>
    <string name="Nationality">Ubwenegihugu</string>
    <string name="Residence">Aho atuye</string>
    <string name="Address">Aderesi</string>
    <string name="Province">Intara</string>
    <string name="District">Akarere</string>
    <string name="Sector">Umurenge</string>
    <string name="Cell">Akagali</string>
    <string name="Village">Umudugudu</string>
    <string name="sync_data">Ohereza abasuzumwe</string>
    <string name="screening_test_sessions">Abasuzumwe batoherejwe</string>
    <string name="contact_support"> Shaka ubufasha </string>
    <string name="sessions">Abasuzumwe</string>
    <string name="subject_profile">Umwirondoro w\'usuzumwa</string>
    <string name="go_back">Subira inyuma</string>
    <string name="rdt_result_pos">COVID-19 Positive.</string>
    <string name="rdt_result_neg">COVID-19 Negative.</string>
    <string name="rdt_result_invalid">Invalid: Control Failed.</string>
    <string name="user_id">Ibisubizo by\'isuzuma rya RDT</string>
    <string name="rdt_result_text">Ibisuzibo</string>
    <string name="user_id_label">"Numero yusuzumwa: "</string>
    <string name="rdt_result_label">"Ibisuzibo bya RDT: "</string>
    <string name="lunch_rdt">Tangira Kumusuzuma</string>
    <string name="capture_result"> Injiza ibisubizo </string>
    <string name="time_remaining">Ibisubizo biraboneka mukanya, tegereza iminota yagenwe: </string>
    <string name="reults_valid_for">Ibisubizo biracyafite agaciro mu gihe kingana na: </string>
    <string name="results_expired">Ibisubizo byataye agaciro</string>
    <string name="rdt_error">Ibitagenze neza muri RDT</string>
    <string name="rdt_results">"Ibisubizo bya RDT "</string>
    <string name="please_capture_the_test_result">Nyamuneka, injiza ibisubizo</string>
    <string name="index_code">Index Code</string>
    <string name="disconnected_internet"> Ntabwo ugifite internet </string>
    <string name="which_type_of_dose">Ese wafashe uruhe rukingo?</string>
    <string name="how_many_doses">Ese wafashe Dose zingahe ?</string>
    <string name="number_of_people_live_in_your_household"> Ese ni abantu bangahe mubana mu nzu?</string>
    <string name="have_you_received_any_covid_19_vaccine_yet">Ese waba warafashe urukingo rwa COVID-19?</string>
    <string name="how_many_number_of_people_living_in_your_household">Ese ni abantu bangahe mubana mu nzu?</string>
    <string name="enter_all_fieldss">Nyamuneka, ni ngombwa kuzuza ibisabwa byose hejuru</string>
    <string name="dose1">Iya mbere</string>
    <string name="dose2">Iya kabiri</string>
    <string name="dose3">"Iya mbere n'iya kabiri"</string>
    <string name="patient_detailss">Umwirondo w\'usuzumwa</string>
    <string name="save_and_continues">Bika ukomeza</string>
    <string name="noo">Oya</string>
    <string name="yesi">Yego</string>
    <string name="validate_code">Kwemeza kode ...</string>
    <string name="fetching_index">Gushakisha kode ...</string>
    <string name="internnet_lost">Habonetse ikibazo mugukoresha murandasi (internet) \n</string>
    <string name="enter_index_first">Nyamuneka, banza wuzuwe kode.</string>
    <string name="choose_patient_category">Hitamo icyiciro cy\'usuzumwa</string>
    <string name="first_choose_patient_category">Nyamuneka, banza uhitemo icyiciro cy\'usuzumwa</string>
    <string name="enter_your_contact_code_to_validate">Shyiramo CODE kugirango ukomeze</string>
    <string name="index">Ukekwaho COVID-19</string>
    <string name="community_health_worker_names">Amazina yawe</string>
    <string name="chw_info">Umujyanama w\'ubuzima</string>
    <string name="tuberculosis">Igituntu</string>
    <string name="pneumonia">Umusonga</string>
    <string name="asthma">Asima</string>
    <string name="flu">Ibicurane</string>
    <string name="cold">Cold</string>
    <string name="others">indi ndwara</string>
    <string name="contact">"Uwahuye n'uwanduye COVID-19"</string>
    <string name="chw_login">Injira</string>
    <string name="chw_enter_codelogin">Uzuzamo KODE yawe</string>
</resources>