<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/select_option"
        style="@style/AnswerTitleText"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/shape_radio"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:text="Choice1"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/shape_radio"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:text="Choice2" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/shape_radio"
            android:paddingStart="20dp"
            android:text="Choice3" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorBullet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:text="@string/select_option_error"
        style="@style/ErrorText"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/lin_diseases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <CheckBox
            android:id="@+id/cxtuberulosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuberculosis" />
        <CheckBox
            android:id="@+id/cxpneumonia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pneumonia" />

        <CheckBox
            android:id="@+id/cxasthma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asthma" />
        <CheckBox
            android:id="@+id/cxflu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flu" />
        <CheckBox
            android:id="@+id/cxcold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cold" />
        <CheckBox
            android:id="@+id/cxothers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others" />


    </LinearLayout>




</LinearLayout>