<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityChooseCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white">


        <ImageView
            android:id="@+id/btn_backfromcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="22dp"
            app:srcCompat="@drawable/arrow_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_bullet"
                android:text="0"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingStart="10dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="@string/choose_patient_category" />

        </LinearLayout>

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:visibility="gone"
        android:layout_marginEnd="15dp"
        android:text="@string/first_choose_patient_category"
        style="@style/AnswerTitleText"/>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="25dp">


        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radiobtnindex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/shape_radio"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:text="@string/index" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/shape_radio"
            android:paddingStart="20dp"
            android:text="@string/contact" />

    </RadioGroup>

    <TextView
        android:id="@+id/errorBulletcate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:text="@string/select_option_error"
        style="@style/ErrorText"/>


<LinearLayout
    android:id="@+id/lay_validate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_contact_code_to_validate"
        android:paddingLeft="20dp"
        android:paddingBottom="15dp"
        />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#000"
        android:visibility="gone"
        app:height="40dp"
        app:width="40dp"
        app:otp_box_background="@drawable/edit_bg"
        app:bar_enabled="true"
        app:bar_height="4dp"
        app:length="6"
        app:otp_text_size="24dp"/>

    <EditText
        android:layout_margin="25dp"
        android:id="@+id/eTindexcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg"
        android:inputType="text"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp" />


</LinearLayout>

</LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_startcategory"
        style="@style/BottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start_test" />



</RelativeLayout>
