<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_bullet"
                android:textColor="@color/white"
                android:text="1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                style="@style/TitleText"
                android:text="@string/chw_info"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:paddingStart="10dp" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/logo"
        android:layout_marginTop="50dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question"
                style="@style/DefaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="15dp"
                android:text="@string/chw_enter_codelogin" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="14dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_chw_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_bg"
                    android:inputType="text"
                    android:paddingStart="40dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="40dp"
                    android:paddingBottom="12dp"
                    android:text=""
                    android:textSize="20sp"

                    />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chw_login_error"
                style="@style/ErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_gravity="bottom"
                android:id="@+id/btn_loginchw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/chw_login"
                style="@style/BottomFormButton"/>
        </LinearLayout>



    </ScrollView>



</RelativeLayout>